fixed weird spacing

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h1 {
     position: absolute;
     text-align: center;
     bottom: 0px;
-    width: 100%;
+    width: 99%;
     background-color: rgba(130, 27, 63, 0.95);
     padding-top: 10px;
 }
